# 3d-scii

./: .gitignore  CMakeLists.txt  README.md
include/: linalg.h  mesh_loader.h  render.h  setting.h  structs.h
src/: linalg.c  main.c  mesh_loader.c  render.c
